--- a/Cocoon/Views/Home/About.cshtml
+++ b/Cocoon/Views/Home/About.cshtml
@@ -7,7 +7,7 @@
         font-weight:700
     }
 </style>
-<div class="content page-container text-right" dir="rtl">
+<div class="content page-container @(culture == "ar" ? "text-right" : "")" dir="rtl">
     <div class="container content-container">
         <div class="page-main-container col-xs-12 page-single">
             <div class="thumbnail page-box">
