--- a/Cocoon/Views/Notifications/All.cshtml
+++ b/Cocoon/Views/Notifications/All.cshtml
@@ -26,7 +26,7 @@
                 @foreach (var notification in Model)
                 {
                     <li>
-                        <div class="media text-right">
+                        <div class="media @(culture == "ar" ? "text-right" : "")">
                             <img class="ml-3 rounded-circle" src="~/Content/web/img/logo-removebg.png" width="50" height="50" alt="note">
                             <div class="media-body">
                                 <h5 class="mt-0">@notification.Title</h5>@notification.Body
