--- a/Cocoon/Views/Orders/Cart.cshtml
+++ b/Cocoon/Views/Orders/Cart.cshtml
@@ -119,7 +119,7 @@
                     @if (SuggestedServices != null && SuggestedServices.Count() > 0)
                     {
                         <div class="col-sm-12 col-md-7 mb-3">
-                            <div class="card text-right wow fadeInLeft" style="background-color: #292929;">
+                            <div class="card @(culture == "ar" ? "text-right" : "") wow fadeInLeft" style="background-color: #292929;">
                                 <div class="card-header"><span>@(culture == "ar" ? "خدمات مشابهة قد تعجبك" : "Our Suggestions")</span></div>
                                 <div class="card-body d-flex">
                                     @foreach (var Service in SuggestedServices)
