--- a/Cocoon/Views/SubCategories/Index.cshtml
+++ b/Cocoon/Views/SubCategories/Index.cshtml
@@ -84,7 +84,7 @@
             </div>
         </div>
 
-        @if (Request.QueryString["q"] != null && Request.QueryString["q"].ToLower() == "deleted")
+        @*@if (Request.QueryString["q"] != null && Request.QueryString["q"].ToLower() == "deleted")
         {
             <div style="margin:15px;">
                 <a href="@Url.Action("Index", "SubCategories")" class="btn btn-success">الاقسام الحالية</a>
@@ -95,7 +95,7 @@
             <div style="margin:15px;">
                 <a href="@Url.Action("Index", "SubCategories", new { q = "deleted" })" class="btn btn-danger">الاقسام المحذوفة</a>
             </div>
-        }
+        }*@
         <div class="table-responsive">
             <table id="table" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover">
                 <thead>
