--- a/Cocoon/Views/Partials/WebsiteFooter.cshtml
+++ b/Cocoon/Views/Partials/WebsiteFooter.cshtml
@@ -166,13 +166,13 @@
                         @if (Model.About != null && Model.About.Twitter != null)
                         {<a style="margin:4px;" href="@Model.About.Twitter" title="@(culture == "ar" ? "تويتر إكس" : "Twitter X")"><i class="fab fa-twitter"></i> @(culture == "ar" ? "تويتر إكس" : "Twitter X")</a>}
                         @if (Model.About != null && Model.About.Instagram != null)
-                        {<a style="margin:4px;" href="@Model.About.Instagram" title="@(culture == "ar" ? "انستجرام" : "Instagram")"><i class="fab fa-instagram"></i> @(culture == "ar" ? "انستجرام" : "Instagram")</a>
+                        {<a style="margin:4px;" href="@Model.About.Instagram" title="@(culture == "ar" ? "انستقرام" : "Instagram")"><i class="fab fa-instagram"></i> @(culture == "ar" ? "انستقرام" : "Instagram")</a>
                         }
                         @if (Model.About != null && Model.About.YouTube != null)
                         {<a style="margin:4px;" href="@Model.About.YouTube" title="@(culture == "ar" ? "يوتيوب" : "YouTube")"><i class="fab fa-youtube"></i> @(culture == "ar" ? "يوتيوب" : "YouTube")</a>
                         }
                         @if (Model.About != null && Model.About.SnapChat != null)
-                        {<a style="margin:4px;" href="@(Model.About != null ? Model.About.SnapChat : "#")" title="@(culture == "ar" ? "واتساب" : "SnapChat")"><i class="fab fa-snapchat"></i> @(culture == "ar" ? "واتساب" : "SnapChat")</a>
+                        {<a style="margin:4px;" href="@(Model.About != null ? Model.About.SnapChat : "#")" title="@(culture == "ar" ? "سناب شات" : "SnapChat")"><i class="fab fa-snapchat"></i> @(culture == "ar" ? "سناب شات" : "SnapChat")</a>
                         } @if (Model.About != null && Model.About.TikTok != null)
                         {
                             <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
