--- a/Cocoon/Views/Home/Index.cshtml
+++ b/Cocoon/Views/Home/Index.cshtml
@@ -4,18 +4,19 @@
 
     var Videos = new List<string>()
 {
-        "01.mp4",
-        "02.mp4",
-        "03.mp4",
-        "04.mp4",
-        "05.mp4",
-        "06.mp4",
-        "07.mp4",
-        "08.mp4",
-        "09.mp4",
-        "10.mp4",
-        "11.mp4",
-        "12.mp4"
+        //"01.mp4",
+        //"02.mp4",
+        //"03.mp4",
+        //"04.mp4",
+        //"05.mp4",
+        //"06.mp4",
+        //"07.mp4",
+        //"08.mp4",
+        //"09.mp4",
+        //"10.mp4",
+        //"11.mp4",
+        //"12.mp4",
+        "last.mp4"
     };
     Random random = new Random();
     var selectedVideo = Videos.OrderBy(v => random.Next()).First();
