--- a/Cocoon/Views/SubCategories/Index.cshtml
+++ b/Cocoon/Views/SubCategories/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@model G4Fit.Models.Domains.SubCategory
 @{
-    ViewBag.Title = "اقسام التطبيق الفرعيه";
     ViewBag.Title = "اقسام التطبيق ";
     var SubCategories = ViewBag.SubCategories as List<G4Fit.Models.Domains.SubCategory>;
     //var Categories = ViewBag.Categories as List<G4Fit.Models.Domains.Category>;
@@ -53,18 +52,18 @@
 
                             <div class="row" style="margin:10px">
                                 @*<div class="col-lg-6">
-                                    <div class="form-group">
-                                        <label for="CategoryId" class="col-sm-5 control-label required">القسم الرئيسى:</label>
-                                        <div class="col-sm-7">
-                                           <select name="CategoryId" id="CategoryId" class="select2 form-control">
-                                               @foreach (var category in Categories)
-                                               {
-                                                   <option value="@category.Id">@category.NameAr</option>
-                                               }
-                                           </select>
+                                        <div class="form-group">
+                                            <label for="CategoryId" class="col-sm-5 control-label required">القسم الرئيسى:</label>
+                                            <div class="col-sm-7">
+                                               <select name="CategoryId" id="CategoryId" class="select2 form-control">
+                                                   @foreach (var category in Categories)
+                                                   {
+                                                       <option value="@category.Id">@category.NameAr</option>
+                                                   }
+                                               </select>
+                                            </div>
                                         </div>
-                                    </div>
-                                </div>*@
+                                    </div>*@
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label for="Image" class="col-sm-5 control-label required">صوره القسم:</label>
@@ -84,7 +83,7 @@
             </div>
         </div>
 
-        @*@if (Request.QueryString["q"] != null && Request.QueryString["q"].ToLower() == "deleted")
+        @if (Request.QueryString["q"] != null && Request.QueryString["q"].ToLower() == "deleted")
         {
             <div style="margin:15px;">
                 <a href="@Url.Action("Index", "SubCategories")" class="btn btn-success">الاقسام الحالية</a>
@@ -95,7 +94,7 @@
             <div style="margin:15px;">
                 <a href="@Url.Action("Index", "SubCategories", new { q = "deleted" })" class="btn btn-danger">الاقسام المحذوفة</a>
             </div>
-        }*@
+        }
         <div class="table-responsive">
             <table id="table" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover">
                 <thead>
@@ -119,8 +118,8 @@
                                 @Html.DisplayFor(modelItem => item.NameEn)
                             </td>
                             @*<td>
-                                @item.Category.NameAr
-                            </td>*@
+                                    @item.Category.NameAr
+                                </td>*@
                             <td>
                                 @if (!string.IsNullOrEmpty(item.ImageUrl))
                                 {
@@ -143,6 +142,9 @@
                                 {
                                     @Html.ActionLink("حذف", "ToggleDelete", new { CatId = item.Id })
                                 }
+                                @if (item.IsDeleted && !item.HardDelete)
+                                {<a class="btn btn-danger" style="margin-bottom:10px" href="@Url.Action("HardDelete", new { CatId = item.Id })">حذف نهائي</a>}
+
                             </td>
                         </tr>
                     }
