--- a/Cocoon/Views/Partials/WebsiteFooter.cshtml
+++ b/Cocoon/Views/Partials/WebsiteFooter.cshtml
@@ -176,7 +176,7 @@
                         } @if (Model.About != null && Model.About.TikTok != null)
                         {
                             <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-                            <a style="margin:4px;" href="@(Model.About != null ? Model.About.TikTok : "#")" title="@(culture == "ar" ? "تيكتوك" : "TikTok")">  <i class="bi bi-tiktok"></i> @(culture == "ar" ? "تيكتوك" : "TikTok")</a>
+                            <a style="margin:4px;" href="@(Model.About != null ? Model.About.TikTok : "#")" title="@(culture == "ar" ? "تك توك" : "TikTok")">  <i class="bi bi-tiktok"></i> @(culture == "ar" ? "تك توك" : "TikTok")</a>
                         }
                     </li>
                 </ul>
